--- a/public/app/css/spotcms.css
+++ b/public/app/css/spotcms.css
@@ -1,6 +1,6 @@
 html, body {
     font-family: Raleway, Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.5em;
     height: 100%;
     margin: 0;
@@ -14,6 +14,27 @@ md-sidenav {
 
 md-sidenav header {
     text-align: center;
+}
+
+md-sidenav .menu-item {
+    text-align: center;
+    line-height: 1.25em;
+    font-size: 3.5em;
+    position: relative;
+    width: 1.25em;
+    height: 1.25em;
+    background: white;
+    border: .03em solid #ddd;
+    color: rgb(63,81,181);
+    border-radius: 50%;
+    display: inline-block;
+    overflow: hidden;
+    margin: 0;
+    vertical-align: middle;
+    zoom: 0.80;
+    transform: translateZ(0);
+    -webkit-transform: scale(0.80);
+    -moz-transform: scale(0.80);
 }
 
 md-sidenav footer {
@@ -46,23 +67,4 @@ md-list-item > button {
 
 #content {
     padding: .3em 3em 0 3em;
-}
-
-.menu-item {
-    text-align: center;
-    line-height: 1.3em;
-    font-size: 3.5em;
-    position: relative;
-    width: 1.3em;
-    height: 1.3em;
-    border: .03em solid #ddd;
-    border-radius: 50%;
-    display: inline-block;
-    overflow: hidden;
-    margin: 0;
-    vertical-align: middle;
-    zoom: 0.80;
-    transform: translateZ(0);
-    -webkit-transform: scale(0.80);
-    -moz-transform: scale(0.80);
 }
