--- a/web-src/admin/app/menu/menu.component.html
+++ b/web-src/admin/app/menu/menu.component.html
@@ -2,8 +2,15 @@
 
 <mat-nav-list>
 
-    <a mat-list-item href="#">
+    <a mat-list-item routerLink="/dashboard">
         <mat-icon class="menu-icon">dashboard</mat-icon>
+        Dashboard
+    </a>
+
+    <mat-divider></mat-divider>
+
+    <a mat-list-item routerLink="/site-content">
+        <mat-icon class="menu-icon">pages</mat-icon>
         Site Content
     </a>
     <a mat-list-item href="#">
