--- a/web-src/admin/styles.css
+++ b/web-src/admin/styles.css
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.content-container {
+    padding: 20px;
+    margin: 0 auto;
+    max-width: 1024px;
+}
