Added file manager component

--- a/web-src/admin/app/menu/menu.component.html
+++ b/web-src/admin/app/menu/menu.component.html
@@ -13,7 +13,7 @@
         <mat-icon class="menu-icon">pages</mat-icon>
         Site Content
     </a>
-    <a mat-list-item href="#">
+    <a mat-list-item routerLink="/file-manager">
         <mat-icon class="menu-icon">folder_open</mat-icon>
         Filemanager
     </a>
