--- a/web-src/admin/app/site-content/site-content.component.html
+++ b/web-src/admin/app/site-content/site-content.component.html
@@ -3,12 +3,11 @@
 
     <mat-nav-list>
         <a mat-list-item *ngFor="let page of pages">
-            <span matListItemTitle>
-                <mat-icon class="menu-icon">note</mat-icon>
-                {{ page.title }}
+            <mat-icon matListItemIcon>insert_drive_file</mat-icon>
+            <div matListItemTitle>{{ page.title }}
                 <span *ngIf="page.children > 0">({{ page.children }})</span>
-            </span>
-            <span matListItemLine>/{{ page.slug }}</span>
+            </div>
+            <div matListItemLine>/{{ page.slug }}</div>
         </a>
     </mat-nav-list>
 </div>
