Started work on a create page component

--- a/web-src/admin/app/file-manager/file-manager.component.html
+++ b/web-src/admin/app/file-manager/file-manager.component.html
@@ -1,5 +1,7 @@
 <div class="content-container">
-    <h1 class="mat-h1">Site Content</h1>
+    <h1 class="mat-h1">
+        File Manager
+    </h1>
 
     <mat-card *ngIf="path.length > 0">
         <mat-card-content>
