--- a/web-src/admin/app/site-content/site-content.component.html
+++ b/web-src/admin/app/site-content/site-content.component.html
@@ -1,5 +1,10 @@
 <div class="content-container">
-    <h1 class="mat-h1">Site Content</h1>
+    <h1 class="mat-h1">
+        Site Content
+        <button mat-raised-button color="primary" routerLink="/create-page">
+            Add page
+        </button>
+    </h1>
 
     <mat-nav-list>
         <a mat-list-item *ngFor="let page of pages">
