Added a non-functional upload-file button

--- a/web-src/admin/app/file-manager/file-manager.component.html
+++ b/web-src/admin/app/file-manager/file-manager.component.html
@@ -1,6 +1,9 @@
 <div class="content-container">
     <h1 class="mat-h1">
         File Manager
+        <button mat-raised-button color="primary" href="#">
+            Upload file
+        </button>
     </h1>
 
     <mat-card *ngIf="path.length > 0">
