Added concept of header button to styling

--- a/web-src/admin/app/create-page/create-page.component.html
+++ b/web-src/admin/app/create-page/create-page.component.html
@@ -1,4 +1,11 @@
 <div class="content-container">
+  <h1 class="mat-h1">
+    Create page
+    <button mat-raised-button class="header-button" color="primary" routerLink="/site-content">
+        <mat-icon>undo</mat-icon> Back
+    </button>
+  </h1>
+
   <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
     <mat-card class="shipping-card">
       <mat-card-header>
