--- a/web-src/admin/app/file-manager/file-manager.component.html
+++ b/web-src/admin/app/file-manager/file-manager.component.html
@@ -1,7 +1,7 @@
 <div class="content-container">
     <h1 class="mat-h1">
         File Manager
-        <button mat-raised-button color="primary" href="#">
+        <button mat-raised-button class="header-button" color="primary" href="#">
             Upload file
         </button>
     </h1>
