--- a/web-src/admin/app/site-content/site-content.component.html
+++ b/web-src/admin/app/site-content/site-content.component.html
@@ -1,7 +1,7 @@
 <div class="content-container">
     <h1 class="mat-h1">
         Site Content
-        <button mat-raised-button color="primary" routerLink="/create-page">
+        <button mat-raised-button class="header-button" color="primary" routerLink="/create-page">
             Add page
         </button>
     </h1>
