--- a/web-src/admin/styles.css
+++ b/web-src/admin/styles.css
@@ -8,3 +8,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: 0 auto;
     max-width: 1024px;
 }
+
+.header-button {
+    float: right;
+}
