Renamed Menu to Admin, and made title just SpotCMS

--- a/web-src/admin/app/app.component.html
+++ b/web-src/admin/app/app.component.html
@@ -18,7 +18,7 @@
                     *ngIf="isHandset$ | async">
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-            <span>SpotSMS Admin</span>
+            <span>SpotSMS</span>
         </mat-toolbar>
 
         <router-outlet></router-outlet>
