--- a/web-src/admin/app/menu/menu.component.html
+++ b/web-src/admin/app/menu/menu.component.html
@@ -1,4 +1,7 @@
-<mat-toolbar>Menu</mat-toolbar>
+<mat-toolbar>
+    <mat-icon>admin_panel_settings</mat-icon>
+    Admin
+</mat-toolbar>
 
 <mat-nav-list>
 
