--- a/web-src/admin/styles.css
+++ b/web-src/admin/styles.css
@@ -12,3 +12,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .header-button {
     float: right;
 }
+
+a:link, a:visited {
+    color: #3f51b5;
+    text-decoration: none;
+}
+a:hover, a:active {
+    color: #142270;
+    text-decoration: underline;
+}
