--- a/web-src/admin/app/menu/menu.component.html
+++ b/web-src/admin/app/menu/menu.component.html
@@ -5,18 +5,18 @@
 
 <mat-nav-list>
 
-    <a mat-list-item routerLink="/dashboard">
+    <a mat-list-item routerLink="/dashboard" routerLinkActive="active-list-item">
         <mat-icon class="menu-icon">dashboard</mat-icon>
         Dashboard
     </a>
 
     <mat-divider></mat-divider>
 
-    <a mat-list-item routerLink="/site-content">
+    <a mat-list-item routerLink="/site-content" routerLinkActive="active-list-item">
         <mat-icon class="menu-icon">pages</mat-icon>
         Site Content
     </a>
-    <a mat-list-item routerLink="/file-manager">
+    <a mat-list-item routerLink="/file-manager" routerLinkActive="active-list-item">
         <mat-icon class="menu-icon">folder_open</mat-icon>
         Filemanager
     </a>
